Massive check in.  AFAICT, website will work minus shaders